# icicle-ai-vector-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
src/app/: auth.py  crud.py  db.py  main.py  rerank.py  schemas.py  settings.py
