[project]
name = "icicle-ai-vector-service"
version = "0.1.0"
description = "ICICLE AI Vector Service (FastAPI + Qdrant)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "qdrant-client>=1.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",

  "pyjwt[crypto]>=2.9",
]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
